--- a/templates/detail.html
+++ b/templates/detail.html
@@ -34,7 +34,7 @@
                         <i class="bi bi-calendar-x-fill me-2"></i> 此展覽活動已結束
                     </div>
                 {% else %}
-                    <h4 class="mb-4 fw-bold text-primary"><i class="bi bi-ticket-perforated me-2"></i>選購票券</h4>
+                    <h4 class="mb-4 fw-bold text-primary">選購票券</h4>
                 {% endif %}
 
                 <form method="POST" action="/exhibition/{{ ex.exhibition_id }}">
