--- a/templates/my_tickets.html
+++ b/templates/my_tickets.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<h2 class="mb-4"><i class="bi bi-ticket-perforated-fill text-primary"></i> 我的票券夾</h2>
+<h2 class="mb-4"> 我的票券夾</h2>
 
 <div class="row">
     {% for t in tickets %}
@@ -41,7 +41,7 @@
                         {% if t.status == 'Used' %}
                             <i class="bi bi-check-circle-fill"></i> 已核銷
                         {% else %}
-                            <i class="bi bi-qr-code-scan"></i> 點此使用
+                            點此使用
                         {% endif %}
                     </button>
                 </div>
