--- a/templates/layout.html
+++ b/templates/layout.html
@@ -53,7 +53,7 @@
 
                     {% if session.role == 'admin' %}
                         <a class="nav-link text-warning fw-bold me-3 border border-warning rounded px-3" href="/admin">
-                            <i class="bi bi-speedometer2"></i> 後台管理
+                            後台管理
                         </a>
                     {% endif %}
 
